Issue #2069 New-BcImage - incorrect evaluation resulting $forceRebuild is true always for us.
Issue #2060 Add BaseUrl and ApiBaseUrl to ContainerHelper config to support embed SaaS environments
Issue #2050 Get-BcContainerAppInfo does not work properly with multiple published apps
Issue #2050 Add parameter -installedOnly to Get-BcContainerAppInfo to only take installed apps into account

2.0.15
Default to process isolation when Host OS is 21H1 and Container OS is 2004
New-BcEnvironment should not enumerate companies and users if -doNotWait is specified
Issue #1979 Add DOCKER_SCAN_SUGGEST to configuration (default false) and set corresponding environment variable
Issue #1998 New-BCContainer ERROR: Database Backup File not found. when hosthelper folder changed
Issue #2003 Change GenerateReportLayout default to 'No' in Run-AlValidation and Run-AlCops
Issue #2006 spelling mistake
Issue #2014 telemetryclient cannot be initialized
Issue #2008 Run-ALValidation - InstallApps/SortByDependencies
Issue #2018 Create .net Assembly Reference folder when using filesonly and includeAL

2.0.14
Issue #1967 add parameter IncludeApiAccess to Create-AadAppsForBC to ensure that API permissions are only added when needed

2.0.13
Allow absolute GenericImageName in config (no reference to host OS)
Application errors in are thrown as errors in ClientContext (Run-TestsInBcContainer) (thanks @hemisphera)
Add support for remote SQL Servers in Remove-BcDatabase and Restore-BcDatabaseFromArtifacts (thanks Remko and Theo)
Issue #1941 XML validation error leads to warnings instead of errors in Compile-AppInBcContainer
Update generic tag list in Get-BestGenericImageName
Default to build 19041 if 19043 doesn't exist (as 19041 is found to work better with 21H1)
Issue #1944 Extract-AppFileToFolder doesn't handle special characters in manifest correctly
Issue #1933 Run-ALValidation fails sometimes with single installApps and multiple apps specified