@@ -19,6 +19,8 @@ Issue #2069 New-BcImage - incorrect evaluation resulting $forceRebuild is true a
 Issue #2060 Add BaseUrl and ApiBaseUrl to ContainerHelper config to support embed SaaS environments
 Issue #2050 Get-BcContainerAppInfo does not work properly with multiple published apps
 Issue #2050 Add parameter -installedOnly to Get-BcContainerAppInfo to only take installed apps into account
+Add OpenFolder parameter to Extract-AppFileToFolder
+Fix dropbox download url (common mistake, replace dl=0 with dl=1) in Download-File
 
 2.0.15
 Default to process isolation when Host OS is 21H1 and Container OS is 2004
